crates/entity-derive/tests/cases/fail/mongodb_not_implemented.stderr
error: MongoDB support is not yet implemented. Use `sql = "trait"` to generate only the trait, then implement it manually for `mongodb::Client`.
 --> tests/cases/fail/mongodb_not_implemented.rs:7:10
  |
7 | #[derive(Entity)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
